proper stdout logging

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "./node_modules/nodemon/bin/nodemon.js"
   },
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "morgan": "^1.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
