fixed local dev bind mounts by moving node_modules

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
  node:
   build: .
   ports:
-    - "8080:8080"
+    - "80:80"
   volumes:
-    - .:/src
+    - .:/usr/src/app
   environment:
     - NODE_ENV=development
 
