cleanup, adding license and readme

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "docker-node-hello",
+  "name": "node-docker-good-defaults",
   "private": true,
-  "version": "0.0.1",
-  "description": "Node.js Hello world app using docker",
+  "version": "1.0.0",
+  "description": "Node.js Hello world app using docker features for easy docker-compose local dev and solid production defaults",
   "author": "Bret Fisher <bret@bretfisher.com>",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "./node_modules/nodemon/bin/nodemon.js"
+    "dev-docker": "../node_modules/nodemon/bin/nodemon.js --debug=5858",
+    "dev-host": "nodemon --debug=5858"
   },
   "dependencies": {
     "express": "^4.14.1",
