--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       args:
         - NODE_ENV=development
-    # you can use standard debug config or expermintal node inspect
+    # you can use standard debug config or experimental node inspect
     command: node --debug=5858 ../node_modules/nodemon/bin/nodemon.js
     #command: node --inspect ../node_modules/nodemon/bin/nodemon.js
     ports:
