Adopt Filesystem Hierarchy Standard
According to the Filesystem Hierarchy Standard (http://www.pathname.com/fhs/) which is, generally, followed by Linux distributions /usr/src should only be used for reference source code. Applications should instead be installed under /opt/<package>.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "sourceMaps": false,
             "outFiles": [],
             "localRoot": "${workspaceRoot}",
-            "remoteRoot": "/usr/src/app"
+            "remoteRoot": "/opt/app"
         }
     ]
 }
