add mysql to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,21 @@ services:
     environment:
       - NODE_ENV=development
 
+  mysql:
+    image: mysql:5.7
+    hostname: ${MYSQL_HOST}
+    container_name: ${MYSQL_HOST}
+    env_file:
+      - ".env"
+    environment:
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    volumes:
+      - "./data/db/mysql:/var/lib/mysql"
+    ports:
+      - "8989:3306"
+
 volumes:
     notused:
