--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "express": "^4.14.1",
-    "morgan": "^1.8.1"
+    "knex": "^0.13.0",
+    "morgan": "^1.8.1",
+    "mysql": "^2.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
