fix tsc compile issues

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,13 +6,14 @@
     "sourceMap": true
   },
   "files": [
-    "/opt/node_modules/@types/mocha/index.d.ts",
-    "/opt/node_modules/@types/node/index.d.ts"
+    "node_modules/@types/mocha/index.d.ts",
+    "node_modules/@types/node/index.d.ts"
   ],
   "include": [
     "src/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules/**/*",
+    "node_modules/**/*"
   ]
 }
