--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,9 +9,9 @@ ARG NODE_ENV=production
 ENV NODE_ENV $NODE_ENV
 
 # default to port 80 for node, and 5858 or 9229 for debug
-ARG PORT=8081
+ARG PORT=8080
 ENV PORT $PORT
-EXPOSE $PORT 5858 9229
+EXPOSE $PORT
 
 # check every 30s to ensure this service returns HTTP 200
 HEALTHCHECK CMD curl -fs http://localhost:$PORT/healthz || exit 1
