Add unit-tests and better integration with VisualStudio Code (vscode):
 - Add possibility to debug unit-tests, config: `Docker Test (Attach 9230 --inspect)`
   - Start a debugging process in the container and wait-for-debugger, this is done by *vscode tasks*
   - It will also kill previous debugging process if existing.
 - Add some tasks (see .vscode/tasks.json):
   - Execute test `Docker npm test`
   - Execute test with watcher `Docker npm run test-watch`
   - Execute test and wait for debbuger `Docker npm run test-wait-debuger`
   - Get a terminal in node container `Docker terminal in container (bash)`

All of this is compatible with unix/windows

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,17 +11,15 @@
             "remoteRoot": "/opt/app"
         },
         {
-            "name": "Attach 5858 --debug",
+            "name": "Docker Test (Attach 9230 --inspect)",
             "type": "node",
             "request": "attach",
-            "protocol": "legacy",
-            "port": 5858,
-            "address": "localhost",
-            "restart": false,
-            "sourceMaps": false,
-            "outFiles": [],
+            "protocol": "inspector",
+            "port": 9230,
             "localRoot": "${workspaceRoot}",
-            "remoteRoot": "/opt/app"
+            "remoteRoot": "/opt/app",
+            "preLaunchTask": "Docker npm run test-wait-debuger", // See ./tasks.json
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
