--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,29 @@ services:
       - notused:/opt/app/node_modules
     environment:
       - NODE_ENV=development
+      - MONGO_URI=mongodb://db:27017
+  
+  mongo:
+    image: mongo
+    container_name: db
+    restart: always
+    volumes:
+      - ./data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - "27017:27017"
+
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
+
 
 volumes:
     notused:
