add mongo service, endpoint to fetch from the DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,19 @@ services:
       - notused:/opt/app/node_modules
     environment:
       - NODE_ENV=development
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=example
+    depends_on:
+      - mongo
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+      - MONGO_INITDB_DATABASE=example-database
 
 volumes:
     notused:
