revert docker-compose.yml to 2.3 with depends_on healthchecks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '2.3'
 
 services:
   node:
@@ -32,26 +32,21 @@ services:
       - notused:/opt/app/node_modules
     environment:
       - NODE_ENV=development
-      - MONGO_USERNAME_FILE=/run/secrets/mongo_root
-      - MONGO_PASSWORD_FILE=/run/secrets/mongo_root_password
+      - MONGO_USERNAME=root
+      - MONGO_PASSWORD=example
       - MONGO_DATABASE_NAME=example-database
-    secrets:
-      - mongo_root
-      - mongo_root_password
     depends_on:
-      - mongo
+      mongo:
+        condition: service_healthy
 
   mongo:
     image: mongo
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME_FILE=/run/secrets/mongo_root
-      - MONGO_INITDB_ROOT_PASSWORD_FILE=/run/secrets/mongo_root_password
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
       - MONGO_INITDB_DATABASE=example-database
-    secrets:
-      - mongo_root
-      - mongo_root_password
     healthcheck:
       test: echo 'db.stats().ok' | mongo localhost:27017/example-database --quiet
       interval: 5s
@@ -60,9 +55,3 @@ services:
 
 volumes:
   notused:
-
-secrets:
-  mongo_root:
-    file: ./secrets/mongo_root
-  mongo_root_password:
-    file: ./secrets/mongo_root_password
