--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -30,11 +30,11 @@ services:
     secrets:
       - mongo_root
       - mongo_root_password
-    # healthcheck:
-    #   test: echo 'db.stats().ok' | mongo localhost:27017/example-database --quiet
-    #   interval: 5s
-    #   timeout: 5s
-    #   retries: 3
+    healthcheck:
+      test: echo 'db.stats().ok' | mongo localhost:27017/example-database --quiet
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
 secrets:
   mongo_root:
