--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2.3'
 
 services:
+
   node:
     build:
       context: .
@@ -37,6 +38,9 @@ services:
     depends_on:
       mongo:
         condition: service_healthy
+    healthcheck:
+      disable: true
+
   mongo:
     image: mongo
     ports:
@@ -48,7 +52,8 @@ services:
     healthcheck:
       test: echo 'db.stats().ok' | mongo localhost:27017/example-database --quiet
       interval: 5s
-      timeout: 5s
+      start_period: 10s
+      timeout: 4s
       retries: 3
 
 volumes:
