--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,11 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=example
       - MONGO_INITDB_DATABASE=example-database
     volumes:
+      # this is an example of how to seed data in mongo containers. The Docker Hub mongo README
+      # explains that any data dropped into the docker-entrypoint-initdb.d directory will be injected 
+      # into mongo at startup. This is also a common pattern for other db solutions like mysql or psql
       - ./database/seed.js:/docker-entrypoint-initdb.d/seed.js
+    # we need to check health here, so that docker-compose will wait for a healthy mongo before it starts node
     healthcheck:
       test: "[ `echo 'db.runCommand(\"ping\").ok' | mongo localhost/example-database --quiet` ] && echo 0 || echo 1"
       interval: 5s
