--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -5,7 +5,7 @@ version: '3.9'
 services:
   node:
     # reminder, don't use latest tag in production, use versions created by CI/CD
-    image: bretfisher/node-docker-good-defaults:latest
+    image: blackdabull/nodedocker:slim-18
     ports:
       - "80:3000"
     environment:
